--- a/Calculo Hipotenusa/Templantes/Index.html
+++ b/Calculo Hipotenusa/Templantes/Index.html
@@ -15,31 +15,39 @@
     <h1 class="text-center mt-2">Calculo de la Hipotenusa</h1>
 
     <div class="container">
-      <div class="jumbotron">
+      <div class="jumbotron mt-3">
         <div class="row">
           <div class="col-12">
-            <label for="">Ingresa un lado del triangulo</label>
-            <input id="ladoA" type="number" class="form-control" />
+            <div class="form-group">
+              <label for="">Ingresa un lado del triangulo</label>
+              <input id="ladoA" type="number" class="form-control" placeholder="1er lado del triangulo" />
+            </div>
           </div>
         </div>
 
         <div class="row">
           <div class="col-12">
-            <label for="">Ingresa un lado del triangulo</label>
-            <input id="ladoB" type="number" class="form-control" />
+            <div class="form-group">
+              <label for="">Ingresa otro lado del triangulo</label>
+              <input id="ladoB" type="number" class="form-control" placeholder="2do lado del triangulo" />
+            </div>
           </div>
         </div>
 
         <div class="row">
           <div class="col-12">
-            <button class="btn btn-outline-info btn-block mt-2" id="btnCalcular">
-              Calcular de la Hipotenusa
+            <button class="btn btn-outline-info btn-block" id="btnCalcular">
+              Calcular la Hipotenusa
             </button>
           </div>
         </div>
 
-        <div id="impresultado" class="alert alert-primary mt-3">
-          Calculo de la hipotenusa
+        <div class="row">
+          <div class="col-12">
+            <label class="mt-3" for="">El resultado de la hipotenusa es:</label>
+            <div id="impresultado" class="alert alert-primary mt-3" role="alert">
+            </div>
+          </div>
         </div>
       </div>
     </div>
