--- a/Distancia entre dos puntos/Templantes/Index.html
+++ b/Distancia entre dos puntos/Templantes/Index.html
@@ -16,41 +16,47 @@
 
     <div class="container">
       <div class="jumbotron">
-        <div class="row">
-          <div class="col-12">
-            <label for="" class="col-12">Punto A</label>
-            <label for="">Ingresa x1</label>
-            <input id="punto1" type="number" class="form-control" />
-            <label for="">Ingresa y1</label>
-            <input id="punto2" type="number" class="form-control" />
+        <div class="text-center row">
+          <div class=" text-center col-6">
+            <label for="" class="col-6">Punto A</label>
+            <div class="form-group ml-6">
+              <label for="">Ingresa x1</label>
+              <input id="punto1" type="number" class="form-control" placeholder="Digita punto 1"/>
+              <label for="">Ingresa y1</label>
+              <input id="punto2" type="number" class="form-control" placeholder="Digita punto 2"/>
+            </div>
           </div>
-        </div>
 
-        <div class="row">
-          <div class="col-12">
-            <label for="" class="col-12">Punto B</label>
+          <div class="text-center col-6">
+            <label for="" class="col-6">Punto B</label>
+            <div class="form-group ml-6">
             <label for="">Ingresa x2</label>
-            <input id="punto3" type="number" class="form-control" />
+            <input id="punto3" type="number" class="form-control" placeholder="Digita punto 3"/>
             <label for="">Ingresa y2</label>
-            <input id="punto4" type="number" class="form-control" />
+            <input id="punto4" type="number" class="form-control" placeholder="Digita punto 4"/>
+          </div>
+          </div> 
+        </div>
+   
+        <div class="row">
+          <div class="col-12">
+            <button class="btn btn-outline-success btn-block" id="IdCalcular">
+              Calcular la Distancia entre puntos
+            </button>
           </div>
         </div>
-
+        
         <div class="row">
-          <button class="btn btn-ouside-info mt-3 form-control" id="IdCalcular">
-            Distancia puntos
-          </button>
-          <button class="btn btn-ouside-info mt-3 form-control" id="Limpiar">Limpiar Datos</button>
-        </div>
-
-        <div class="row">
-          <div class="alert alert-primary mt-3 form-control" id="ImpriResultado">
-            Distancia entre dos puntos
+          <div class="col-12">
+            <label class="mt-3" for="">La distancia entre dos puntos es:</label>
+            <div class="alert alert-success" role="alert" id="ImpriResultado">
+            </div>
           </div>
         </div>
       </div>
     </div>
-
+  </div>
+    
     <script src="./../Javascript/App.js"></script>
   </body>
 </html>
