Se creo una practica para el calculo de la suma de la respuestas

--- a/Monto de un cheque/Templantes/Index.html
+++ b/Monto de un cheque/Templantes/Index.html
@@ -45,15 +45,17 @@
 
         <div class="row">
           <div class="col-12 text-center">
-            <label for=""
-              >Ingresa el costo de comida por dia</label
-            >
-            <input
-              id="costocomida"
-              type="number"
-              class="form-control"
-              placeholder="Digite el costo de comida por dia"
-            />
+            <div class="form-group">
+              <label for=""
+                >Ingresa el costo de comida por dia</label
+              >
+              <input
+                id="costocomida"
+                type="number"
+                class="form-control"
+                placeholder="Digite el costo de comida por dia"
+              />
+            </div>
           </div>
         </div>
 
