Se creo una practica para el calculo de la suma de la respuestas

--- a/Numeros de respuestas/Templantes/Index.html
+++ b/Numeros de respuestas/Templantes/Index.html
@@ -58,7 +58,7 @@
 
         <div class="row">
           <div class="col-12 mt-3">
-              <label for="">la suma de las respuestas es:</label>
+              <label for="">La suma de las respuestas es:</label>
             <div
               class="alert alert-success" role="alert"
               id="Imprimirresult"
