--- a/Monto de un cheque/Templantes/Index.html
+++ b/Monto de un cheque/Templantes/Index.html
@@ -32,7 +32,7 @@
             </div>
           </div>
 
-          <div class="col-6">
+          <div class="text-center col-6">
             <label for="">Ingresa el costo de hotel por noche</label>
             <input
               id="costohotel"
