--- a/Numeros de respuestas/Templantes/Index.html
+++ b/Numeros de respuestas/Templantes/Index.html
@@ -15,7 +15,7 @@
     <h1 class="text-center mt-3">Número de respuestas</h1>
     <div class="container">
       <div class="jumbotron mt-3">
-        <div class="row">
+        <div class="text-center row">
           <div class="col-6">
             <div class="form-group">
               <label for="">Ingrese el numero de respuestas correctas</label>
