Se creo una practica para calcular el semiperimetro de un triangulo

--- a/Semiperimetro/Templantes/Index.html
+++ b/Semiperimetro/Templantes/Index.html
@@ -20,18 +20,18 @@
           <div class="col-4">
               <div class="form-group">
                   <label for="">Ingresa el primer lado del triangulo</label>
-                  <input id="primerlado" type="number"  placeholder="1er lado" />
+                  <input id="primerlado" type="number" placeholder="Digita el 1er lado" />
               </div>
           </div>
           <div class="col-4">
               <div class="form-group">
                   <label for="">Ingresa el segundo lado del triangulo</label>
-                  <input id="segundolado" type="number" placeholder="2do lado" />
+                  <input id="segundolado" type="number" placeholder=" Digita el 2do lado"/>
               </div>
           </div>
           <div class="col-4">
             <label for="">Ingresa el tercer lado del triangulo</label>
-            <input id="tercerlado" type="number" placeholder="3er lado"/>
+            <input id="tercerlado" type="number" placeholder=" Digita el 3er lado"/>
           </div>
         </div>
 
