Se creo una practica para descuento de trajes

--- a/Trajes/Templantes/Index.html
+++ b/Trajes/Templantes/Index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron">
+      <div class="jumbotron mt-5">
         <h1 class="text-center">Compra de trajes</h1>
-        <div class="row">
+        <div class="row text-center mt-4">
           <div class="col-12">
             <div class="form-group">
               <label for="">Ingresa el pago del traje</label>
