--- a/Estacionamiento/Templantes/Index.html
+++ b/Estacionamiento/Templantes/Index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
         <div class="container">
-            <div class="jumbotron">
+            <div class="jumbotron mt-5">
                 <h1 class="text-center">Tarifa de Estacionamiento</h1>  
-                <div class="text-center row">
+                <div class="text-center row mt-4s">
                     <div class="col-12">
                         <div class="form-group">
                             <label for="">Ingresa las horas a estar en el estacionamiento</label>
