--- a/Practicas5(Estructura)/Templantes/Index.html
+++ b/Practicas5(Estructura)/Templantes/Index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
 
-    <button class="btn btn-outline-success btn-block mt-3" id="Compararnumeros">Compararnumeros</button>
+    <button class="btn btn-outline-success btn-block mt-3" id="Compararnumeros">Comparar Numeros</button>
 
     <div class="alert alert-success mt-3" role="alert" id="Imprimirnumeros"></div>
 
