Se creo una practica para imprimir los numeros del 100 al 0

--- a/Numeros100al0/Templantes/Index.html
+++ b/Numeros100al0/Templantes/Index.html
@@ -13,8 +13,7 @@
 
      <button class="btn-outline-success btn-block mt-3" id="Contarnumeros">Contar números</button>   
 
-    <div class="alert alert-success mt-3" role="alert" id="imprimirnumeros"></div>
-    <ul class="list-group" id="Imprimirlist"></ul>
+    <ul class="list-group mt-3" id="Imprimirlist"></ul>
 
   <script src="./../Javascript/App.js"></script>
   </body>
