--- a/Arreglos/Practica4/Templantes/Index.html
+++ b/Arreglos/Practica4/Templantes/Index.html
@@ -10,7 +10,36 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-          
+
+    <div class="container">
+      <div class="jumbotron mt-3">
+        <div class="row">
+            <div class="col-6 text-center">
+              <h1>Applicación 4</h1>
+            </div>
+            <div class="col-4 offset-12">
+              <button class="btn btn-light btn-block" id="ReiniciarApp">Reiniciar App</button>
+            </div>
+        </div>
+
+          <div class="row mt-3">
+            <div class="col-12">
+              <div class="form-group">
+                <label for="">Inserte el tamaño del array</label>
+                <input type="text" id="tamanoarray" class="form-control" placeholder="Inserte el tamaño del array">
+  
+              </div>
+            </div>
+          </div>
+
+          <div class="row"> 
+            <div class="col-12">
+              <ul class="list-group" id="Mostrarlista"></ul>
+              <div class="alert alert-success mt-3" role="alert" id="imprimirsuma"></div>
+            </div>
+          </div>
+      </div>
+    </div>
 
    <script src="./../Javascript/App.js"></script>
   </body>
