Se creo una practica mostrar un arreglo e imprimir solo los numeros pares

--- a/Arreglos/NumerosPares/Templantes/Index.html
+++ b/Arreglos/NumerosPares/Templantes/Index.html
@@ -31,8 +31,12 @@
             </div>
 
             <div class="row">
-                <div class="col-12">
+                <div class="col-6">
+                    <label for="">Arreglo Principal</label>
                     <ul class="list-group" id="listaimprimir"></ul>
+                </div>
+                <div class="col-6">
+                    <label for="">Arreglo Pares</label>
                     <ul class="list-group" id="listaimprimirpares"></ul>
                 </div>
             </div>
